# Healthcare-Management-System

./: CMakeLists.txt  DataStructs.h  FileManager.cpp  FileManager.h  Operations.cpp  Operations.h  PrimaryIndex.cpp  PrimaryIndex.h  SecondaryIndex.cpp  SecondaryIndex.h  main.cpp  test_primary.cpp
